# PowerLift-WindTurbine

./: .env.example  .gitignore  BUG_FIXES_SUMMARY.md  FAULT_DIAGNOSIS_SHAP.md  Load-power-dataset.ipynb  PDM_CHATBOT_FEATURES.md  README  README.md  README_LLM.md  README_old.md  REVIEWER_AGENT_SETUP.md  __init__.py  check_environment.py  config.yaml  config.yaml.template  deepwind2026_tt_opinf.tex  example_ml_wake_extraction_result.py  fix_encoding.py  powerRotor_combined.csv  pyproject.toml  readme_package.md  requirements.txt  reviewer_agent.py  rotor_power_agent.py  shap_interpreter.py  test_agent_2c.py  test_agent_2d.py  test_gui_simulation.py  test_ml_wake_analysis.py  test_orchestrator.py  test_wake_deficit_spacing.py  tt_opinf_inference_agent.py  verify_model_paths_fixed.py  verify_wake_spacing.py  wake_animation.py  wake_flow_prediction_agent.py  wind_turbine_gui.py  wind_turbine_orchestrator.py
RUL/: EXECUTION_RESULTS.md  FEATURE_ANALYSIS_REPORT.txt  FUHRLANDER_MODEL_REPORT.md  GMM_STATE_ORDERING_FIX.md  IMPLEMENTATION_SUMMARY.md  README_INFERENCE.md  RESEARCH_PAPER_PM.md  fix_state_order_map.py  inference_viz.py  rul_output.txt  save_models.py  shap_explainer.py  show_results.py  test_rul_imports.py  test_rul_quick.py  test_state_ordering.py  wind_turbine_pm_fuhrlander.py  wind_turbine_pm_sklearn.py
RUL/saved_models/: metadata.json  test_data.npz
TT_OpInf/: __init__.py  tt_opinf.py
docs/: README.md
docs/research/: RESEARCH_PAPER_PM.tex  SHAP_ANALYSIS_REPORT.md  gpr_power_prediction.tex  technical_report_multiagent.bib  technical_report_multiagent.tex
docs/setup/: AGENT_2B_SETUP.md  readme_package.md
docs/user-guides/: ML_WAKE_ANALYSIS_GUIDE.md  PDM_CHATBOT_FEATURES.md  README_Optimization.md  (+1 more)
llm/: __init__.py  anthropic_llm.py  base.py  google_llm.py  ntnu_llm.py  ollama.py  openai_llm.py
(+2 files in other folders)
