[project]
name = "powerlift"
version = "0.1.0"
description = "Multi-Agent Wind Turbine Analysis System - Physics-informed ML for power prediction and wake flow simulation"
readme = "readme_package.md"
license = "MIT"
requires-python = ">=3.11,<3.13"
authors = [
    { name = "SINTEF Digital" },
]
keywords = ["wind-turbine", "wake-flow", "machine-learning", "gaussian-process", "tensor-train", "streamlit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "scikit-learn==1.8.0",
    "joblib>=1.1.0",
    "streamlit>=1.20.0",
    "pyvista>=0.37.0",
    "requests>=2.25.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "shap>=0.50.0",
    "torch>=1.12.0",
    "geopy>=2.4.0",
    "pydeck>=0.8.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "seaborn>=0.12.0",
    "pandas>=1.5.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.25.0"]
google = ["google-genai>=0.3.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]
all = [
    "anthropic>=0.25.0",
    "google-genai>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    ".venv/",
    ".venv_pdm/",
    "__pycache__/",
    "*.pyc",
    ".git/",
    ".env",
    ".streamlit/secrets.toml",
    "PowerLift_BACKUP/",
    "*.gif",
    "*.png",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]
